--- a/accounts.yml
+++ b/accounts.yml
@@ -9,4 +9,4 @@ accounts:
     - Mumbai
     - London
     - Washington
-  msg: Welcome to the Banking Accounts Default application read from file
+  msg: Welcome to the Banking Accounts Default application read from GIT
