--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -9,4 +9,4 @@ accounts:
     - Indianapollis
     - Berlin
     - Chennai
-  msg: Welcome to the Banking Accounts Dev application
+  msg: Welcome to the Banking Accounts Dev application added in Github
