--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -9,4 +9,4 @@ accounts:
     - Chennai
     - Berlin
     - Indianapollis
-  msg: Welcome to the Banking Accounts Prod application from GITHUB
+  msg: Welcome to the Banking Accounts Prod application from GITHUB---
