--- a/customers-prod.yml
+++ b/customers-prod.yml
@@ -10,3 +10,27 @@ customers:
     - Berlin
     - Indianapollis
   msg: Welcome to the Banking customers Prod application
+
+info:
+  app:
+    version: 1.0.0
+    name: Customers Prod Microservice
+    description: Banking Customers Application
+    
+endpoints:
+  shutdown:
+    enabled: 'true'
+    
+eureka:
+  instance:
+    preferIpAddress: 'true '
+  client:
+    fetchRegistry: 'true'
+    registerWithEureka: 'true'
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+      
+management:
+  endpoint:
+    shutdown:
+      enabled: 'true'
