--- a/accounts.yml
+++ b/accounts.yml
@@ -10,3 +10,12 @@ accounts:
     - London
     - Washington
   msg: Welcome to the Banking Accounts Default application read from GIT just added to verify from Github
+  
+eureka:
+  instance:
+    preferIpAddress: 'true'
+  client:
+    fetchRegistry: 'true'
+    registerWithEureka: 'true'
+    serviceUrl:
+      defaultZone: 'http://localhost:8761/eureka/'
