--- a/accounts-dev.yml
+++ b/accounts-dev.yml
@@ -10,3 +10,12 @@ accounts:
     - Berlin
     - Chennai
   msg: Welcome to the Banking Accounts Dev application added in Githu
+  
+eureka:
+  instance:
+    preferIpAddress: 'true'
+  client:
+    fetchRegistry: 'true'
+    registerWithEureka: 'true'
+    serviceUrl:
+      defaultZone: 'http://localhost:8761/eureka/'
