--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -10,3 +10,12 @@ accounts:
     - Berlin
     - Indianapollis
   msg: Welcome to the Banking Accounts Prod application from GITHUB--->
+
+eureka:
+  instance:
+    preferIpAddress: 'true'
+  client:
+    fetchRegistry: 'true'
+    registerWithEureka: 'true'
+    serviceUrl:
+      defaultZone: 'http://localhost:8761/eureka/'
