--- a/accounts.yml
+++ b/accounts.yml
@@ -12,6 +12,8 @@ accounts:
   msg: Welcome to the Banking Accounts Default application read from GIT just added to verify from Github
   
 eureka:
+  instance:
+    preferIpAddress: 'true'
   client:
     fetchRegistry: 'true'
     registerWithEureka: 'true'
