--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -12,6 +12,8 @@ accounts:
   msg: Welcome to the Banking Accounts Prod application from GITHUB--->
 
 eureka:
+  instance:
+    preferIpAddress: 'true'
   client:
     fetchRegistry: 'true'
     registerWithEureka: 'true'
