--- a/cards.yml
+++ b/cards.yml
@@ -11,26 +11,36 @@ cards:
     - Washington
   msg: Welcome to the Banking cards Default application
   
+server:
+  port: '9010'
+  servlet:
+    context-path: '/banking'
+    
+## Configuring info endpoint
 info:
   app:
-    version: 1.0.0
-    name: Cards Default Microservice
-    description: Banking Cards Application
+    name: 'Cards Microservice'
+    description: 'Banking Cards Application'
+    version: '1.0.0'    
     
+management:
+  endpoint:
+    shutdown:
+      enabled: 'true'
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+        
 endpoints:
   shutdown:
     enabled: 'true'
     
 eureka:
   instance:
-    preferIpAddress: 'true '
+    preferIpAddress: 'true'
   client:
     fetchRegistry: 'true'
     registerWithEureka: 'true'
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-      
-management:
-  endpoint:
-    shutdown:
-      enabled: 'true'
+      defaultZone: 'http://localhost:8080/eureka/'
