--- a/loans.yml
+++ b/loans.yml
@@ -11,26 +11,36 @@ loans:
     - Washington
   msg: Welcome to the Banking loans Default application
   
+server:
+  port: '9020'
+  servlet:
+    context-path: '/banking'
+    
+## Configuring info endpoint
 info:
   app:
-    version: 1.0.0
-    name: Loans Default Microservice
-    description: Banking Loans Application
+    name: 'Loans Microservice'
+    description: 'Banking Loans Application'
+    version: '1.0.0'    
     
+management:
+  endpoint:
+    shutdown:
+      enabled: 'true'
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+        
 endpoints:
   shutdown:
     enabled: 'true'
     
 eureka:
   instance:
-    preferIpAddress: 'true '
+    preferIpAddress: 'true'
   client:
     fetchRegistry: 'true'
     registerWithEureka: 'true'
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-      
-management:
-  endpoint:
-    shutdown:
-      enabled: 'true'
+      defaultZone: 'http://localhost:8080/eureka/'
