--- a/customers-dev.yml
+++ b/customers-dev.yml
@@ -11,26 +11,36 @@ customers:
     - Chennai
   msg: Welcome to the Banking customers Dev application
   
+server:
+  port: '9000'
+  servlet:
+    context-path: '/banking'
+    
+## Configuring info endpoint
 info:
   app:
-    version: 1.0.0
-    name: Customers Dev Microservice
-    description: Banking Customers Application
+    name: 'Customers Microservice'
+    description: 'Banking Customers Application'
+    version: '1.0.0'    
     
+management:
+  endpoint:
+    shutdown:
+      enabled: 'true'
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+        
 endpoints:
   shutdown:
     enabled: 'true'
     
 eureka:
   instance:
-    preferIpAddress: 'true '
+    preferIpAddress: 'true'
   client:
     fetchRegistry: 'true'
     registerWithEureka: 'true'
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-      
-management:
-  endpoint:
-    shutdown:
-      enabled: 'true'
+      defaultZone: 'http://localhost:8080/eureka/'
