--- a/accounts.yml
+++ b/accounts.yml
@@ -48,11 +48,23 @@ eureka:
 resilience4j:
   circuitbreaker:
     instances:
-      getCardsFallback:
+      getCardsSupport:
         failureRateThreshold: '50'
         waitDurationInOpenState: '30000'
         minimumNumberOfCalls: '5'
         permittedNumberOfCallsInHalfOpenState: '2'
     configs:
       default:
+        registerHealthIndicator: 'true'        
+  retry:
+    instances:
+      getCustomerDetailsSupport:
+        maxRetryAttempts: '3'
+        waitDuration: '2000'
+    configs:
+      default:
         registerHealthIndicator: 'true'   
+        
+        
+resilience4j:
+         
