--- a/gateway.yml
+++ b/gateway.yml
@@ -11,7 +11,7 @@ spring:
       discovery:
         locator:
           enabled: 'true'
-#          lowerCaseServiceId: 'true'
+          lowerCaseServiceId: 'true'
           
 logging:
   level:
