--- a/gateway.yml
+++ b/gateway.yml
@@ -12,7 +12,7 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: 'true'
+#          enabled: 'true'
           lowerCaseServiceId: 'true'
           
 logging:
