--- a/gateway.yml
+++ b/gateway.yml
@@ -7,8 +7,8 @@ info:
     
 spring:
   cloud:
-    discovery:
-      enabled: 'true'
+#    discovery:
+#      enabled: 'true'
     gateway:
       discovery:
         locator:
