--- a/customers-dev.yml
+++ b/customers-dev.yml
@@ -13,8 +13,8 @@ customers:
   
 server:
   port: '9000'
-  servlet:
-    context-path: '/banking'
+#  servlet:
+#    context-path: '/banking
     
 ## Configuring info endpoint
 info:
