--- a/accounts.yml
+++ b/accounts.yml
@@ -44,4 +44,11 @@ eureka:
     registerWithEureka: 'true'
     serviceUrl:
       defaultZone: 'http://localhost:8080/eureka/'
+      
+spring:     
+  sleuth:
+    sampler:
+      percentage: '1'
+  zipkin:
+    baseUrl: http://localhost:9411/      
 
