--- a/gateway.yml
+++ b/gateway.yml
@@ -31,4 +31,11 @@ eureka:
     fetchRegistry: 'true'
     registerWithEureka: 'true'
     serviceUrl:
-      defaultZone: http://localhost:8080/eureka/  
+      defaultZone: http://localhost:8080/eureka/ 
+      
+spring:     
+  sleuth:
+    sampler:
+      percentage: '1'
+  zipkin:
+    baseUrl: http://localhost:9411/      
