--- a/loans.yml
+++ b/loans.yml
@@ -44,3 +44,10 @@ eureka:
     registerWithEureka: 'true'
     serviceUrl:
       defaultZone: 'http://localhost:8080/eureka/'
+      
+spring:     
+  sleuth:
+    sampler:
+      percentage: '1'
+  zipkin:
+    baseUrl: http://localhost:9411/      
