--- a/service-discovery.yml
+++ b/service-discovery.yml
@@ -8,3 +8,10 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 server:
   port: '8080'
+  
+spring:     
+  sleuth:
+    sampler:
+      percentage: '1'
+  zipkin:
+    baseUrl: http://localhost:9411/  
